Add primary keys call