@@ -1,17 +1,20 @@
 package com.databricks.jdbc.client.impl.sdk.helper;
 
 import static com.databricks.jdbc.client.impl.sdk.helper.CommandConstants.*;
-import static com.databricks.jdbc.commons.util.ValidationUtil.throwErrorIfEmptyOrWildcard;
+import static com.databricks.jdbc.commons.util.ValidationUtil.throwErrorIfNull;
 import static com.databricks.jdbc.driver.DatabricksJdbcConstants.*;
 
 import com.databricks.jdbc.commons.util.WildcardUtil;
 import com.databricks.jdbc.core.DatabricksSQLFeatureNotSupportedException;
 import com.databricks.jdbc.core.IDatabricksSession;
 import java.sql.SQLException;
-import java.util.Map;
+import java.util.Collections;
+import java.util.HashMap;
 
 public class CommandBuilder {
   private String catalogName = null;
+  private String schemaName = null;
+  private String tableName = null;
   private String schemaPattern = null;
   private String tablePattern = null;
   private String columnPattern = null;
@@ -21,12 +24,23 @@ public class CommandBuilder {
 
   public CommandBuilder(String catalogName, IDatabricksSession session) throws SQLException {
     this.sessionContext = session.toString();
-    throwErrorIfEmptyOrWildcard(Map.of(CATALOG, catalogName), sessionContext); // Validating input
+    throwErrorIfNull(
+        Collections.singletonMap(CATALOG, catalogName), sessionContext); // Validating input
     this.catalogName = catalogName;
   }
 
-  public CommandBuilder(IDatabricksSession session) throws SQLException {
+  public CommandBuilder(IDatabricksSession session) {
     this.sessionContext = session.toString();
+  }
+
+  public CommandBuilder setSchema(String schemaName) {
+    this.schemaName = schemaName;
+    return this;
+  }
+
+  public CommandBuilder setTable(String tableName) {
+    this.tableName = tableName;
+    return this;
   }
 
   public CommandBuilder setSchemaPattern(String pattern) {
@@ -54,11 +68,6 @@ public class CommandBuilder {
   }
 
   private String fetchSchemaSQL() throws SQLException {
-    if (this.catalogName == null) {
-      throw new DatabricksSQLFeatureNotSupportedException(
-          String.format(
-              "Catalog name has to be set for fetching schemas. Context: %s", sessionContext));
-    }
     String showSchemaSQL = String.format(SHOW_SCHEMA_IN_CATALOG_SQL, catalogName);
     if (!WildcardUtil.isNullOrEmpty(schemaPattern)) {
       showSchemaSQL += String.format(LIKE_SQL, schemaPattern);
@@ -67,11 +76,6 @@ public class CommandBuilder {
   }
 
   private String fetchTablesSQL() throws SQLException {
-    if (this.catalogName == null) {
-      throw new DatabricksSQLFeatureNotSupportedException(
-          String.format(
-              "Catalog name has to be set for fetching tables. Context: %s", sessionContext));
-    }
     String showTablesSQL = String.format(SHOW_TABLES_SQL, catalogName);
     if (!WildcardUtil.isNullOrEmpty(schemaPattern)) {
       showTablesSQL += String.format(SCHEMA_LIKE_SQL, schemaPattern);
@@ -83,11 +87,6 @@ public class CommandBuilder {
   }
 
   private String fetchColumnsSQL() throws SQLException {
-    if (this.catalogName == null) {
-      throw new DatabricksSQLFeatureNotSupportedException(
-          String.format(
-              "Catalog name has to be set for fetching columns. Context: %s", sessionContext));
-    }
     String showColumnsSQL = String.format(SHOW_COLUMNS_SQL, catalogName);
 
     if (!WildcardUtil.isNullOrEmpty(schemaPattern)) {
@@ -105,11 +104,6 @@ public class CommandBuilder {
   }
 
   private String fetchFunctionsSQL() throws SQLException {
-    if (this.catalogName == null) {
-      throw new DatabricksSQLFeatureNotSupportedException(
-          String.format(
-              "Catalog name has to be set for fetching columns. Context: %s", sessionContext));
-    }
     String showFunctionsSQL = String.format(SHOW_FUNCTIONS_SQL, catalogName);
     if (!WildcardUtil.isNullOrEmpty(schemaPattern)) {
       showFunctionsSQL += String.format(SCHEMA_LIKE_SQL, schemaPattern);
@@ -124,10 +118,20 @@ public class CommandBuilder {
     return SHOW_TABLE_TYPES_SQL;
   }
 
+  private String fetchPrimaryKeysSQL() throws SQLException {
+    HashMap<String, String> hashMap = new HashMap<>();
+    hashMap.put(SCHEMA, schemaName);
+    hashMap.put(TABLE, tableName);
+    throwErrorIfNull(hashMap, sessionContext);
+    return String.format(SHOW_PRIMARY_KEYS_SQL, catalogName, schemaName, tableName);
+  }
+
   public String getSQLString(CommandName command) throws SQLException {
     switch (command) {
       case LIST_CATALOGS:
         return fetchCatalogSQL();
+      case LIST_PRIMARY_KEYS:
+        return fetchPrimaryKeysSQL();
       case LIST_SCHEMAS:
         return fetchSchemaSQL();
       case LIST_TABLE_TYPES:
